# tiny-media-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: controller.rs  http.rs  io.rs  lib.rs  main.rs  net.rs  worker.rs
src/net/: socket2.rs  socket2_io_uring.rs  socket2_mmsg.rs
src/tasks/: mod.rs  whep.rs  whip.rs
