[package]
name = "tiny-media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
crossbeam = "0.8.4"
log = "0.4.20"
tiny_http = "0.12.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
str0m = { git = "https://github.com/algesten/str0m.git", branch = "main" }
faster-stun = "1.0.2"
